// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withData HOC with missing pageData should return the errorMain component 1`] = `
<div>
  <h1>
    This is a 
    200
     error.
  </h1>
</div>
`;

exports[`withData HOC with no data should return the errorMain component and 500 status 1`] = `
<div>
  <h1>
    This is a 
    500
     error.
  </h1>
</div>
`;

exports[`withData HOC with non 200 status should return the errorMain component 1`] = `
<div>
  <h1>
    This is a 
    157
     error.
  </h1>
</div>
`;

exports[`withData HOC with valid articles data but different home service other than locale service should return the errorMain component 1`] = `
<div>
  <h1>
    This is a 
    404
     error.
  </h1>
</div>
`;

exports[`withData HOC with valid articles data should return the passed in component 1`] = `
<div>
  <h1>
    Hola
  </h1>
</div>
`;

exports[`withData HOC with valid front-pages data should return the passed in component 1`] = `
<div>
  <h1>
    Hola
  </h1>
</div>
`;
